--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,9 +119,9 @@ body {
     left top,
     right top,
     from(#7dd56f), to(#28b487)
-  );
-  background-image: linear-gradient(to right, #7dd56f, #28b487);
-  /* -webkit-background-clip: text; */
+  ); 
+   background-image: linear-gradient(to right, #7dd56f, #28b487);
+   -webkit-background-clip: text; 
   color: transparent;
   letter-spacing: 0.1rem;
   line-height: 1.3;
@@ -829,6 +829,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: flex-end;
 }
 .footer__nav li {
   margin-left: 1.5rem;
